@startuml

class Game {
    - Board board
    - GameIO* io
    - vector<Move> move_history
    - Color current_player
    --
    + run()
    - handlePlayerTurn()
    - handleMachineTurn()
}

class Board {
    - Piece* grid[8][8]
    - int red_pieces
    - int black_pieces
    --
    + initialize()
    + getPiece(pos): const Piece*
    + isLegalMove(m): MoveError
    + movePiece(m): bool
}

class Piece {
    - Color color
    - bool isKing
    --
    + Piece(c)
    + makeKing()
    + getSymbol(): char
}

interface GameIO {
    + displayBoard(board, status, error)
    + getPlayerMove(player, move_out): bool
    + displayHistory(history)
    + waitForContinuation()
}

class ConsoleIO {
    + displayBoard(...)
    + getPlayerMove(...)
    + displayHistory(...)
    + waitForContinuation()
}

class FltkIO {
    - Fl_Window* window
    - Fl_Button* board_buttons[8][8]
    - Fl_Browser* history_view
    - Fl_Button* btn_new_game
    - Fl_Button* btn_end_game
    - Fl_Button* btn_quit
    - Fl_Box* status_box
    - const Board* current_board_ptr
    - struct input_state
    --
    + displayBoard(...)
    + getPlayerMove(...)
    + displayHistory(...)
    + waitForContinuation()
    - handle_board_click(r, c)
    - handle_end_game()
    - handle_quit()
    - handle_new_game()
}

class Position {
    + int row
    + int col
    --
    + ind_to_str(out_str)
    + {static} str_to_ind(s): Position
}

class Move {
    + Position from
    + Position to
    + Color player_color
    + bool is_multijump
    + move_string[64]
    --
    + to_char(): const char*
}



Game <-- Board

Game <-- GameIO

ConsoleIO --> GameIO

FltkIO --> GameIO

Board <-- Piece

Game --> Move

Board --> Move

Move <-- Position

@enduml